@@ -83,6 +83,7 @@ t/30_preproc_sub.out
 t/30_preproc_syn.out
 t/32_noinc.t
 t/32_noinc.v
+t/33_gzip.t
 t/34_parser.out
 t/34_parser.t
 t/35_sigparser.out
